# py-tree-sitter-languages

./: .editorconfig  .gitignore  .pdm-python  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  README.rst  build.py  build.sh  language_definitions.json  languages.json  parsers.json  pyproject.toml  repos.txt  setup.py  update-readme.pl  update-repos.sh
.github/: CONTRIBUTING.md
.github/workflows/: build.yaml  ci.yaml  release.yml  tests.yml  update.yml
scripts/: update.lua  update.sh
tests/: entry_point_test.py  test_tree_sitter_languages.py
tree_sitter_language_pack/: __init__.py  language.c
tree_sitter_languages/: __init__.py  core.pyx  generated.pyx  language.c  languages.c  languages.h
tree_sitter_languages/repos/: clone.sh  repos.txt
